--- a/dev/html/-header.html
+++ b/dev/html/-header.html
@@ -2,13 +2,13 @@
 	<div class="header-top">
 		<div class="container">
 			<div class="row">
-				<div class="col xs2 m2 l2">
+				<div class="col xs2 m3 l3">
 					<p class="custom header-pad_top">Custom Care: 888-23-4567</p>
 				</div>
-				<div class="col xs2 m7 l10 text-right">
+				<div class="col xs2 m6 l9 text-right">
 					<div class="header-pad_top">
-						<div class="header-box">su</div>
-						<div class="header-box">my account</div>
+						<div class="header-box dropdown">$ us</div>
+						<div class="header-box"><span class="icon icon-account"></span>my account</div>
 						<div class="header-box">search</div>
 					</div>
 				</div>
@@ -18,7 +18,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col xs2 m2 l2">
-				<div class="logo">logo</div>
+				<div class="logo"><img src="img/logo.png" alt=""></div>
 			</div>	
 			<div class="col xs2 m2 l3 cart">
 				
